upload html after update 2

--- a/cylinders_test_AR.html
+++ b/cylinders_test_AR.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">  
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Master Gas - مستر جاز</title>
+    <title>Master Gas - ماستر جاس</title>
+    <link rel="icon" href="images/logo_tab.png">
     <link rel="stylesheet" href="CSS/bootrap_rtl_4.5.3.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="CSS/all.css" />
     <link rel="stylesheet" href="CSS/animate.css">
@@ -222,12 +223,12 @@
                     </div>
                     <div class="textContent">
                         <h2>للإستفسارات و الشكاوي</h2>
-                        <p>إتصل بنا أو اترك رسالة و سيقوم أحد ممثلي خدمة العملاء بالرد عليك فى أقرب وقت</p>
+                        <p>اتصل بنا أو اترك رسالة و سيقوم أحد ممثلي خدمة العملاء بالرد عليك فى أقرب وقت</p>
                     </div>
                 </div>
                 <div data-wow-delay="0.4s" class="wow InquiriesComplaintsBtns col-lg-4">
-                    <a href="call_us_AR.html">إتصل بنا</a>
-                    <a href="connect_with_us_AR.html">إرسل طلبك</a>
+                    <a href="call_us_AR.html">اتصل بنا</a>
+                    <a href="connect_with_us_AR.html">ارسل طلبك</a>
                 </div>
             </div>
         </div>
@@ -260,8 +261,8 @@
                 <ul class="contactData d-flex align-items-center">
                     <h2>19134</h2>
                     <li class="iconsList d-flex">
-                        <a href="#"><i class="fas fa-phone-alt d-flex align-items-center justify-content-center"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f d-flex align-items-center justify-content-center"></i></a>
+                        <a href="tel:+2019134"><i class="fas fa-phone-alt d-flex align-items-center justify-content-center"></i></a>
+                        <a href="https://www.facebook.com/MastergasEG" target="_blank"><i class="fab fa-facebook-f d-flex align-items-center justify-content-center"></i></a>
                     </li>
                 </ul>
             </div>
