--- a/index_AR.html
+++ b/index_AR.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Master Gas - مستر جاز</title>
+    <title>Master Gas - ماستر جاس</title>
+    <link rel="icon" href="images/logo_tab.png">
     <link rel="stylesheet" href="CSS/bootrap_rtl_4.5.3.min.css">
+    <link rel="stylesheet" href="CSS/fancyBox.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="CSS/all.css" />
     <link rel="stylesheet" href="CSS/animate.css">
     <link rel="stylesheet" href="CSS/slick.css">
@@ -13,7 +15,7 @@
     <link rel="stylesheet" href="CSS/main.css"> 
     <link rel="stylesheet" href="CSS/AR_style.css">
 </head>
-<body>
+<body>  
     <!-- ============== Start Navbar =============== -->    
     <nav class="navbar navbar-expand-lg fixed-top" id="navbar">
         <a class="navbar-brand" href="index_AR.html">
@@ -133,7 +135,7 @@
     <!-- ============== Start Main =============== -->
     <main>
         <div class="mainTools">
-            <ul>
+            <ul> 
                 <li class="d-flex wow" data-wow-delay="0.6s">
                     <div class="liSectionItems">
                         <i class="fas fa-search"></i>
@@ -227,15 +229,15 @@
         </div>
         <div class="container"> 
             <div class="d-flex flex-column align-items-center justify-content-center">
-                <h1 data-wow-delay="0.3s" class="wow fadeInDown">تاريخ نفتخر به و مستقبل مشرق</h1>
-                <a href="#" data-wow-delay="0.3s" class="wow fadeInUp whoWeLink d-flex align-items-center justify-content-between">
+                <h1 data-wow-delay="0.3s" class="wow fadeInDown">تاريخ نفتخر به و مستقبل مشرق</h1>          
+                <a data-fancybox href="https://www.youtube.com/watch?v=GhthHC0s38A" data-wow-delay="0.3s" class="wow fadeInUp whoWeLink d-flex align-items-center justify-content-between">
                     <img src="images/play_icon.png" alt="">
                     <div class="whoWeSection">
                         <h2>من نحن</h2>
                         <p>شاهد الفديو</p>
                     </div>
                 </a>
-                <a href="#">
+                <a href="#sliderAboutCompany">
                     <img class="scrollMouseIcon" src="images/scrollMouse.png" alt="">
                 </a>
             </div>
@@ -272,7 +274,7 @@
     </div>
     <!-- ============== End mainBranches =============== -->
     <!-- ============== Start sliderAboutCompany =============== -->
-    <div class="sliderAboutCompany d-flex align-items-center">
+    <div class="sliderAboutCompany d-flex align-items-center" id="sliderAboutCompany">
         <div class="backCurve"></div>   <!-- this is the div which has background image -->
         <div class="container">
             <!-- ########## this is the arrows of slider ########## -->
@@ -291,7 +293,7 @@
                             منه هو عرض أشكال النصوص وأحجامها وألوانها 
                            دون الاهتمام بالمحتوى</p>
                         <div class="d-flex justify-content-end col-11">
-                            <a href="#">المزيد</a>
+                            <a href="briefAboutCompany_AR.html">المزيد</a>
                         </div>
                     </div>
                     <div class="sliderImage">
@@ -303,7 +305,7 @@
                         <h2>عن الشركة</h2>
                         <p>هو نص شكلي لا معنى له، يتكون من أحرف متتابعة  بطريقة عشوائية غير مفهومة لغوياً. الغرض الأساسي  منه هو عرض أشكال النصوص وأحجامها وألوانها  دون الاهتمام بالمحتوى</p>
                         <div class="d-flex justify-content-end col-11">
-                            <a href="#">المزيد</a>
+                            <a href="briefAboutCompany_AR.html">المزيد</a>
                         </div>
                     </div>
                     <div class="sliderImage">
@@ -315,7 +317,7 @@
                         <h2>عن الشركة</h2>
                         <p>هو نص شكلي لا معنى له، يتكون من أحرف متتابعة  بطريقة عشوائية غير مفهومة لغوياً. الغرض الأساسي  منه هو عرض أشكال النصوص وأحجامها وألوانها  دون الاهتمام بالمحتوى</p>
                         <div class="d-flex justify-content-end col-11">
-                            <a href="#">المزيد</a>
+                            <a href="briefAboutCompany_AR.html">المزيد</a>
                         </div>
                     </div>
                     <div class="sliderImage">
@@ -327,7 +329,7 @@
                         <h2>عن الشركة</h2>
                         <p>هو نص شكلي لا معنى له، يتكون من أحرف متتابعة  بطريقة عشوائية غير مفهومة لغوياً. الغرض الأساسي  منه هو عرض أشكال النصوص وأحجامها وألوانها  دون الاهتمام بالمحتوى</p>
                         <div class="d-flex justify-content-end col-11">
-                            <a href="#">المزيد</a>
+                            <a href="briefAboutCompany_AR.html">المزيد</a>
                         </div>
                     </div>
                     <div class="sliderImage">
@@ -339,7 +341,7 @@
                         <h2>عن الشركة</h2>
                         <p>هو نص شكلي لا معنى له، يتكون من أحرف متتابعة  بطريقة عشوائية غير مفهومة لغوياً. الغرض الأساسي  منه هو عرض أشكال النصوص وأحجامها وألوانها  دون الاهتمام بالمحتوى</p>
                         <div class="d-flex justify-content-end col-11">
-                            <a href="#">المزيد</a>
+                            <a href="briefAboutCompany_AR.html">المزيد</a>
                         </div>
                     </div>
                     <div class="sliderImage">
@@ -351,7 +353,7 @@
                         <h2>عن الشركة</h2>
                         <p>هو نص شكلي لا معنى له، يتكون من أحرف متتابعة  بطريقة عشوائية غير مفهومة لغوياً. الغرض الأساسي  منه هو عرض أشكال النصوص وأحجامها وألوانها  دون الاهتمام بالمحتوى</p>
                         <div class="d-flex justify-content-end col-11">
-                            <a href="#">المزيد</a>
+                            <a href="briefAboutCompany_AR.html">المزيد</a>
                         </div>
                     </div>
                     <div class="sliderImage">
@@ -494,7 +496,7 @@
                         <a data-wow-delay="0.7s" class="wow nav-link col-11 col-sm-5 col-lg-12 tab_with_arrow_icon" id="v-pills-maadiStation1_5-tab" data-toggle="pill" href="#v-pills-maadiStation1_5" role="tab" aria-controls="v-pills-maadiStation1_5" aria-selected="false">محطة المعادي</a>
                         <a data-wow-delay="0.8s" class="wow nav-link col-11 col-sm-5 col-lg-12 tab_with_arrow_icon" id="v-pills-maadiStation1_6-tab" data-toggle="pill" href="#v-pills-maadiStation1_6" role="tab" aria-controls="v-pills-maadiStation1_6" aria-selected="false">محطة المعادي</a>
                         <a data-wow-delay="0.9s" class="wow nav-link col-11 col-sm-5 col-lg-12 tab_with_arrow_icon" id="v-pills-maadiStation1_7-tab" data-toggle="pill" href="#v-pills-maadiStation1_7" role="tab" aria-controls="v-pills-maadiStation1_7" aria-selected="false">محطة المعادي</a>
-                    </div>
+                    </div> 
                 </div>
                 <div class="col-11 col-lg-8 ourMaps_Section_Content">
                     <div class="tab-content" id="v-pills-tabContent">
@@ -663,12 +665,12 @@
                     </div>
                     <div class="textContent">
                         <h2>للإستفسارات و الشكاوي</h2>
-                        <p>إتصل بنا أو اترك رسالة و سيقوم أحد ممثلي خدمة العملاء بالرد عليك فى أقرب وقت</p>
+                        <p>اتصل بنا أو اترك رسالة و سيقوم أحد ممثلي خدمة العملاء بالرد عليك فى أقرب وقت</p>
                     </div>
                 </div>
                 <div data-wow-delay="0.4s" class="wow InquiriesComplaintsBtns col-lg-4">
-                    <a href="call_us_AR.html">إتصل بنا</a>
-                    <a href="connect_with_us_AR.html">إرسل طلبك</a>
+                    <a href="call_us_AR.html">اتصل بنا</a>
+                    <a href="connect_with_us_AR.html">ارسل طلبك</a>
                 </div>
             </div>
         </div>
@@ -701,11 +703,11 @@
                 <ul class="contactData d-flex align-items-center">
                     <h2>19134</h2>
                     <li class="iconsList d-flex">
-                        <a href="#"><i class="fas fa-phone-alt d-flex align-items-center justify-content-center"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f d-flex align-items-center justify-content-center"></i></a>
+                        <a href="tel:+2056284545"><i class="fas fa-phone-alt d-flex align-items-center justify-content-center"></i></a>
+                        <a href="https://www.facebook.com/MastergasEG" target="_blank"><i class="fab fa-facebook-f d-flex align-items-center justify-content-center"></i></a>
                     </li>
                 </ul>
-            </div>
+            </div> 
         </div>
         <div class="footerCopyRights text-center">
             <p>جميع الحقوق محفوظة</p>
@@ -718,6 +720,7 @@
     <script src="JS/bootstrap_rtl_4.5.3.bundle.min.js"></script>
     <script src="JS/slick.min.js"></script>
     <script src="JS/wow.min.js"></script>
+    <script src="JS/fancyBox.min.js"></script>
     <script>
         $(document).ready(function(){
             // ###### calculator function
@@ -752,5 +755,6 @@
         });
     </script>
     <script src="JS/main.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
 </body>
 </html>
