--- a/index_EN.html
+++ b/index_EN.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Master Gas - مستر جاز</title>
+    <title>Master Gas - ماستر جاس</title>
+    <link rel="icon" href="images/logo_tab.png">
     <link rel="stylesheet" href="CSS/bootrap_ltr_4.5.3.min.css">
+    <link rel="stylesheet" href="CSS/fancyBox.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="CSS/all.css" />
     <link rel="stylesheet" href="CSS/animate.css">
     <link rel="stylesheet" href="CSS/slick.css">
@@ -13,7 +15,7 @@
     <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="CSS/EN_style.css">
 </head>
-<body>
+<body> 
     <!-- ============== Start Navbar =============== -->    
     <nav class="navbar navbar-expand-lg fixed-top">
         <a class="navbar-brand" href="index_EN.html">
@@ -229,15 +231,14 @@
         <div class="container">
             <div class="d-flex flex-column align-items-center justify-content-center">
                 <h1 data-wow-delay="0.3s" class="wow fadeInDown">A history in which we are proud of a bright future</h1>
-                <a href="#" data-wow-delay="0.3s" class="wow fadeInUp whoWeLink d-flex align-items-center justify-content-between">
-                    <!-- <i class="fas fa-play d-flex align-items-center justify-content-center"></i> -->
+                <a data-fancybox href="https://www.youtube.com/watch?v=GhthHC0s38A" data-wow-delay="0.3s" class="wow fadeInUp whoWeLink d-flex align-items-center justify-content-between">
                     <img src="images/play_icon.png" alt="">
                     <div class="whoWeSection">
                         <h2>who are we</h2>
                         <p>Watch the video</p>
                     </div>
                 </a>
-                <a href="#">
+                <a href="#sliderAboutCompany">
                     <img class="scrollMouseIcon" src="images/scrollMouse.png" alt="">
                 </a>
             </div>
@@ -274,7 +275,7 @@
     </div>
     <!-- ============== End mainBranches =============== -->
     <!-- ============== Start sliderAboutCompany =============== -->
-    <div class="sliderAboutCompany d-flex align-items-center">
+    <div class="sliderAboutCompany d-flex align-items-center" id="sliderAboutCompany">
         <div class="backCurve"></div>   <!-- this is the div which has background image -->
         <div class="container">
             <!-- ########## this is the arrows of slider ########## -->
@@ -290,7 +291,7 @@
                         <h2>About company</h2>
                         <p>It is a dummy text that is meaningless, consisting of randomly incomprehensible linguistically incomprehensible letters. Its primary purpose is to display text shapes, sizes, and colors without concern for the content</p>
                         <div class="d-flex justify-content-end col-11">
-                            <a href="#">More</a>
+                            <a href="briefAboutCompany_EN.html">More</a>
                         </div>
                     </div>
                     <div class="sliderImage">
@@ -302,7 +303,7 @@
                         <h2>About company</h2>
                         <p>It is a dummy text that is meaningless, consisting of randomly incomprehensible linguistically incomprehensible letters. Its primary purpose is to display text shapes, sizes, and colors without concern for the content</p>
                         <div class="d-flex justify-content-end col-11">
-                            <a href="#">More</a>
+                            <a href="briefAboutCompany_EN.html">More</a>
                         </div>
                     </div>
                     <div class="sliderImage">
@@ -314,7 +315,7 @@
                         <h2>About company</h2>
                         <p>It is a dummy text that is meaningless, consisting of randomly incomprehensible linguistically incomprehensible letters. Its primary purpose is to display text shapes, sizes, and colors without concern for the content</p>
                         <div class="d-flex justify-content-end col-11">
-                            <a href="#">More</a>
+                            <a href="briefAboutCompany_EN.html">More</a>
                         </div>
                     </div>
                     <div class="sliderImage">
@@ -326,7 +327,7 @@
                         <h2>About company</h2>
                         <p>It is a dummy text that is meaningless, consisting of randomly incomprehensible linguistically incomprehensible letters. Its primary purpose is to display text shapes, sizes, and colors without concern for the content</p>
                         <div class="d-flex justify-content-end col-11">
-                            <a href="#">More</a>
+                            <a href="briefAboutCompany_EN.html">More</a>
                         </div>
                     </div>
                     <div class="sliderImage">
@@ -338,7 +339,7 @@
                         <h2>About company</h2>
                         <p>It is a dummy text that is meaningless, consisting of randomly incomprehensible linguistically incomprehensible letters. Its primary purpose is to display text shapes, sizes, and colors without concern for the content</p>
                         <div class="d-flex justify-content-end col-11">
-                            <a href="#">More</a>
+                            <a href="briefAboutCompany_EN.html">More</a>
                         </div>
                     </div>
                     <div class="sliderImage">
@@ -350,7 +351,7 @@
                         <h2>About company</h2>
                         <p>It is a dummy text that is meaningless, consisting of randomly incomprehensible linguistically incomprehensible letters. Its primary purpose is to display text shapes, sizes, and colors without concern for the content</p>
                         <div class="d-flex justify-content-end col-11">
-                            <a href="#">More</a>
+                            <a href="briefAboutCompany_EN.html">More</a>
                         </div>
                     </div>
                     <div class="sliderImage">
@@ -700,9 +701,9 @@
                 <p>It is a dummy text that is meaningless, consisting of randomly incomprehensible linguistically incomprehensible letters. Its primary purpose is to display text shapes, sizes, and colors without concern for the content</p>
                 <ul class="contactData d-flex align-items-center">
                     <h2>19134</h2>
-                    <li class="iconsList d-flex">
-                        <a href="#"><i class="fas fa-phone-alt d-flex align-items-center justify-content-center"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f d-flex align-items-center justify-content-center"></i></a>
+                    <li class="iconsList d-flex"> 
+                        <a href="tel:+2019134"><i class="fas fa-phone-alt d-flex align-items-center justify-content-center"></i></a>
+                        <a href="https://www.facebook.com/MastergasEG" target="_blank"><i class="fab fa-facebook-f d-flex align-items-center justify-content-center"></i></a>
                     </li>
                 </ul>
             </div>
@@ -718,6 +719,7 @@
     <script src="JS/bootstrap_ltr_4.5.3.bundle.min.js"></script>
     <script src="JS/slick.min.js"></script>
     <script src="JS/wow.min.js"></script>
+    <script src="JS/fancyBox.min.js"></script>
     <script>
         $(document).ready(function(){
             // ###### calculator function
