--- a/vehicles_converting_AR.html
+++ b/vehicles_converting_AR.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Master Gas - مستر جاز</title>
+    <title>Master Gas - ماستر جاس</title>
+    <link rel="icon" href="images/logo_tab.png">
     <link rel="stylesheet" href="CSS/bootrap_rtl_4.5.3.min.css">
+    <link rel="stylesheet" href="CSS/fancyBox.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="CSS/all.css" />
     <link rel="stylesheet" href="CSS/animate.css">
     <link rel="stylesheet" href="CSS/slick.css">
@@ -147,7 +149,7 @@
                     <p data-wow-delay="0.8s" class="wow">هو نص شكلي لا معنى له، يتكون من أحرف متتابعة بطريقة عشوائية غير مفهومة لغوياً. هو نص شكلي لا معنى له،  يتكون من أحرف متتابعة بطريقة عشوائي</p>
                 </div>
                 <div data-wow-delay="0.2s" class="wow row aboutVehiclesConvertingImgVideo justify-content-center align-items-center col-lg-6 col-xl-6">
-                    <a href="#" class="col-sm-10 col-lg-11 d-flex align-items-center justify-content-center"> 
+                    <a data-fancybox href="https://www.youtube.com/watch?v=GhthHC0s38A" class="col-sm-10 col-lg-11 d-flex align-items-center justify-content-center"> 
                         <img src="images/play_icon.png" class="playIconVideo" alt="">
                         <img src="images/carInNatureBox.png" alt="">
                     </a>
@@ -312,12 +314,12 @@
                     </div>
                     <div class="textContent">
                         <h2>للإستفسارات و الشكاوي</h2>
-                        <p>إتصل بنا أو اترك رسالة و سيقوم أحد ممثلي خدمة العملاء بالرد عليك فى أقرب وقت</p>
+                        <p>اتصل بنا أو اترك رسالة و سيقوم أحد ممثلي خدمة العملاء بالرد عليك فى أقرب وقت</p>
                     </div>
                 </div>
                 <div data-wow-delay="0.4s" class="wow InquiriesComplaintsBtns col-lg-4">
-                    <a href="call_us_AR.html">إتصل بنا</a>
-                    <a href="connect_with_us_AR.html">إرسل طلبك</a>
+                    <a href="call_us_AR.html">اتصل بنا</a>
+                    <a href="connect_with_us_AR.html">ارسل طلبك</a>
                 </div>
             </div>
         </div>
@@ -341,7 +343,7 @@
                 <!-- <ul class="footerLinks d-flex flex-column">
                     <a href="#">رابط خدمة عملاء</a>
                     <a href="#">رابط خدمة عملاء</a>
-                    <a href="#">رابط خدمة عملاء</a>
+                    <a href="#">رابط خدمة عملاء</a> 
                 </ul> -->
             </div>
             <div class="footerSection col-sm-6 col-lg-3">
@@ -350,8 +352,8 @@
                 <ul class="contactData d-flex align-items-center">
                     <h2>19134</h2>
                     <li class="iconsList d-flex">
-                        <a href="#"><i class="fas fa-phone-alt d-flex align-items-center justify-content-center"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f d-flex align-items-center justify-content-center"></i></a>
+                        <a href="tel:+2019134"><i class="fas fa-phone-alt d-flex align-items-center justify-content-center"></i></a>
+                        <a href="https://www.facebook.com/MastergasEG" target="_blank"><i class="fab fa-facebook-f d-flex align-items-center justify-content-center"></i></a>
                     </li>
                 </ul>
             </div>
@@ -367,6 +369,7 @@
     <script src="JS/bootstrap_rtl_4.5.3.bundle.min.js"></script>
     <script src="JS/slick.min.js"></script>
     <script src="JS/wow.min.js"></script>
+    <script src="JS/fancyBox.min.js"></script>
     <script src="JS/main.js"></script>
 </body>
 </html>
