--- a/cng_mobile_AR.html
+++ b/cng_mobile_AR.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Master Gas - مستر جاز</title>
+    <title>Master Gas - ماستر جاس</title>
+    <link rel="icon" href="images/logo_tab.png">
     <link rel="stylesheet" href="CSS/bootrap_rtl_4.5.3.min.css">
+    <link rel="stylesheet" href="CSS/fancyBox.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="CSS/all.css" />
     <link rel="stylesheet" href="CSS/animate.css">
     <link rel="stylesheet" href="CSS/slick.css">
@@ -142,7 +144,7 @@
             <h2 data-wow-delay="0.2s" class="wow aboutCngMobileHeader">عن <span>CNG</span> موبايل</h2>
             <p data-wow-delay="0.4s" class="wow">هو نص شكلي لا معنى له، يتكون من أحرف متتابعة بطريقة عشوائية غير مفهومة لغوياً. الغرض الأساسي  منه هو عرض أشكال النصوص وأحجامها وألوانها دون الاهتمام بالمحتوى . هو نص شكلي لا معنى له،  يتكون من أحرف متتابعة بطريقة عشوائية غير مفهومة منه هو عرض أشكال النصوص</p>
             <div data-wow-delay="0.6s" class="wow row imgVideoContainer justify-content-center align-items-center">
-                <a href="#" class="d-flex align-items-center justify-content-center">
+                <a data-fancybox href="https://www.youtube.com/watch?v=GhthHC0s38A" class="d-flex align-items-center justify-content-center">
                     <img src="images/play_icon.png" class="playIconVideo" alt="">
                     <img src="images/carInNature.png" alt="">
                 </a>
@@ -186,7 +188,7 @@
                 </div>
             </div>
             <div data-wow-delay="0.4s" class="wow row imgVideoContainer justify-content-center align-items-center">
-                <a href="#" class="col-10 col-lg-11 d-flex align-items-center justify-content-center"> 
+                <a data-fancybox href="https://www.youtube.com/watch?v=GhthHC0s38A" class="col-10 col-lg-11 d-flex align-items-center justify-content-center"> 
                     <img src="images/play_icon.png" class="playIconVideo" alt="">
                     <img src="images/carInNature.png" alt="">
                 </a>
@@ -204,12 +206,12 @@
                     </div>
                     <div class="textContent">
                         <h2>للإستفسارات و الشكاوي</h2>
-                        <p>إتصل بنا أو اترك رسالة و سيقوم أحد ممثلي خدمة العملاء بالرد عليك فى أقرب وقت</p>
+                        <p>اتصل بنا أو اترك رسالة و سيقوم أحد ممثلي خدمة العملاء بالرد عليك فى أقرب وقت</p>
                     </div>
                 </div>
                 <div data-wow-delay="0.4s" class="wow InquiriesComplaintsBtns col-lg-4">
-                    <a href="call_us_AR.html">إتصل بنا</a>
-                    <a href="connect_with_us_AR.html">إرسل طلبك</a>
+                    <a href="call_us_AR.html">اتصل بنا</a>
+                    <a href="connect_with_us_AR.html">ارسل طلبك</a>
                 </div>
             </div>
         </div>
@@ -242,8 +244,8 @@
                 <ul class="contactData d-flex align-items-center">
                     <h2>19134</h2>
                     <li class="iconsList d-flex">
-                        <a href="#"><i class="fas fa-phone-alt d-flex align-items-center justify-content-center"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f d-flex align-items-center justify-content-center"></i></a>
+                        <a href="tel:+2019134"><i class="fas fa-phone-alt d-flex align-items-center justify-content-center"></i></a>
+                        <a href="https://www.facebook.com/MastergasEG" target="_blank"><i class="fab fa-facebook-f d-flex align-items-center justify-content-center"></i></a>
                     </li>
                 </ul>
             </div>
@@ -259,6 +261,7 @@
     <script src="JS/bootstrap_rtl_4.5.3.bundle.min.js"></script>
     <script src="JS/slick.min.js"></script>
     <script src="JS/wow.min.js"></script>
+    <script src="JS/fancyBox.min.js"></script>
     <script src="JS/main.js"></script>
 </body>
 </html>
