--- a/connect_with_us_EN.html
+++ b/connect_with_us_EN.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Master Gas - مستر جاز</title>
+    <title>Master Gas - ماستر جاس</title>
+    <link rel="icon" href="images/logo_tab.png">
     <link rel="stylesheet" href="CSS/bootrap_ltr_4.5.3.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="CSS/all.css" />
     <link rel="stylesheet" href="CSS/animate.css">
@@ -231,8 +232,8 @@
                 <ul class="contactData d-flex align-items-center">
                     <h2>19134</h2>
                     <li class="iconsList d-flex">
-                        <a href="#"><i class="fas fa-phone-alt d-flex align-items-center justify-content-center"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f d-flex align-items-center justify-content-center"></i></a>
+                        <a href="tel:+2019134"><i class="fas fa-phone-alt d-flex align-items-center justify-content-center"></i></a>
+                        <a href="https://www.facebook.com/MastergasEG" target="_blank"><i class="fab fa-facebook-f d-flex align-items-center justify-content-center"></i></a>
                     </li>
                 </ul>
             </div>
