--- a/errorPage_EN.html
+++ b/errorPage_EN.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Master Gas - مستر جاز</title>
+    <title>Master Gas - ماستر جاس</title>
+    <link rel="icon" href="images/logo_tab.png">
     <link rel="stylesheet" href="CSS/bootrap_ltr_4.5.3.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="CSS/all.css" />
     <link rel="stylesheet" href="CSS/animate.css">
