--- a/vehicles_converting_EN.html
+++ b/vehicles_converting_EN.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Master Gas - مستر جاز</title>
+    <title>Master Gas - ماستر جاس</title>
+    <link rel="icon" href="images/logo_tab.png">
     <link rel="stylesheet" href="CSS/bootrap_ltr_4.5.3.min.css">
+    <link rel="stylesheet" href="CSS/fancyBox.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="CSS/all.css" />
     <link rel="stylesheet" href="CSS/animate.css">
     <link rel="stylesheet" href="CSS/slick.css">
@@ -147,7 +149,7 @@
                     <p data-wow-delay="0.8s" class="wow">It is a dummy text that is meaningless, consisting of randomly incomprehensible linguistically incomprehensible letters. It is a nonsensical diacritical text, made up of sequential letters</p>
                 </div>
                 <div data-wow-delay="0.2s" class="wow row aboutVehiclesConvertingImgVideo justify-content-center align-items-center col-lg-6 col-xl-6">
-                    <a href="#" class="col-sm-10 col-lg-11 d-flex align-items-center justify-content-center"> 
+                    <a data-fancybox href="https://www.youtube.com/watch?v=GhthHC0s38A" class="col-sm-10 col-lg-11 d-flex align-items-center justify-content-center"> 
                         <img src="images/play_icon.png" class="playIconVideo" alt="">
                         <img src="images/carInNatureBox.png" alt="">
                     </a>
@@ -351,8 +353,8 @@
                 <ul class="contactData d-flex align-items-center">
                     <h2>19134</h2>
                     <li class="iconsList d-flex">
-                        <a href="#"><i class="fas fa-phone-alt d-flex align-items-center justify-content-center"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f d-flex align-items-center justify-content-center"></i></a>
+                        <a href="tel:+2019134"><i class="fas fa-phone-alt d-flex align-items-center justify-content-center"></i></a>
+                        <a href="https://www.facebook.com/MastergasEG" target="_blank"><i class="fab fa-facebook-f d-flex align-items-center justify-content-center"></i></a>
                     </li>
                 </ul>
             </div>
@@ -368,6 +370,7 @@
     <script src="JS/bootstrap_ltr_4.5.3.bundle.min.js"></script>
     <script src="JS/slick.min.js"></script>
     <script src="JS/wow.min.js"></script>
+    <script src="JS/fancyBox.min.js"></script>
     <script src="JS/main.js"></script>
 </body>
 </html>
