--- a/index_EN.html
+++ b/index_EN.html
@@ -134,7 +134,7 @@
     <main>
         <div class="mainTools">
             <ul>
-                <li class="d-flex wow" data-wow-delay="0.6s">
+                <li class="d-flex wow" data-wow-delay="0.6s" id="searchField" data-wow-delay="0.6s" data-target="#searchModal">
                     <div class="liSectionItems">
                         <i class="fas fa-search"></i>
                         <div class="toolSectionData d-flex align-items-center">
@@ -144,13 +144,13 @@
                 </li>
                 <li class="d-flex wow" data-wow-delay="0.8s">
                     <div class="liSectionItems">
-                        <i class="fab fa-facebook-f"></i>
+                        <a href="https://www.facebook.com/MastergasEG" target="_blank"><i class="fab fa-facebook-f"></i></a>
                         <div class="toolSectionData d-flex align-items-center">
-                            <a href="#">Master Gas</a>
+                            <a href="https://www.facebook.com/MastergasEG" target="_blank">Master Gas</a>
                         </div>
                     </div>
                 </li>
-                <li class="d-flex wow" data-wow-delay="1s">
+                <li class="d-flex wow" id="telephoneField" data-wow-delay="1s" data-target="#telephoneNumberModal">
                     <div class="liSectionItems">
                         <i class="fas fa-phone-alt"></i>
                         <div class="toolSectionData d-flex align-items-center">
@@ -158,7 +158,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="d-flex wow" data-wow-delay="1.2s">
+                <li class="d-flex wow" data-wow-delay="1.2s" id="addressField" data-wow-delay="1.2s" data-target="#addressModal">
                     <div class="liSectionItems">
                         <i class="fas fa-map-marker-alt"></i>
                         <div class="toolSectionData d-flex align-items-center">
@@ -166,15 +166,69 @@
                         </div>
                     </div>
                 </li>
-                <li class="d-flex wow" data-wow-delay="1.4s">
+                <li class="d-flex wow" id="calcuField" data-wow-delay="1.4s" data-target="#calculatorSaving">
                     <div class="liSectionItems">
                         <i class="fas fa-calculator"></i>
                         <div class="toolSectionData d-flex align-items-center">
-                            <a data-toggle="modal" data-target="#calculatorSaving"  >The price of oil today</a>
+                            <a data-toggle="modal" data-target="#calculatorSaving">The price of oil today</a>
                         </div>
                     </div>
                 </li>
             </ul> 
+            <!-- Modal of search -->
+            <div class="modal fade searchModal" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close d-flex align-items-center justify-content-center" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="bodyContent text-center">
+                                <h2>Find what you want</h2>
+                                <input type="text" placeholder="Find what you want">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Modal of address -->
+            <div class="modal fade addressModal" id="addressModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close d-flex align-items-center justify-content-center" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="bodyContent text-center">
+                                <h2>Address</h2>
+                                <p data-toggle="modal" data-target="#addressModalDescrib">Nasr Street, Cairo, Egypt</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Modal of telephoneNumber -->
+            <div class="modal fade telephoneModal" id="telephoneNumberModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close d-flex align-items-center justify-content-center" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="bodyContent text-center">
+                                <h2>Call Us</h2>
+                                <a href="tel:+2056284545">+20 104548451</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!-- Modal of calculator -->
             <div class="modal fade calculatorModal" id="calculatorSaving" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
@@ -202,10 +256,10 @@
                                     <input type="number" id="naturalGasInput" value="0">
                                 </div>
                                 <div class="calcResult d-flex align-items-center">
-                                    <div class="calcBtnSec col-3 d-flex">
-                                        <button class="calcBtn col-11" id="calcBtn">Account</button>
+                                    <div class="calcBtnSec col-12 col-sm-3 d-flex">
+                                        <button class="calcBtn col-12 col-sm-11" id="calcBtn">Account</button>
                                     </div>
-                                    <div class="resultSec d-flex align-items-center justify-content-between col-9">
+                                    <div class="resultSec d-flex align-items-center justify-content-between col-12 col-sm-9">
                                         <div class="saving">
                                             <h2>Saving</h2>
                                         </div>
